--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Interactiva</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Malla Curricular Interactiva</title>
+  <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <h1>Malla Interactiva Ingeniería</h1>
-  <div class="container" id="malla"></div>
-
+  <h1>Malla Curricular Interactiva</h1>
+  <div id="malla" class="grid"></div>
   <script src="script.js"></script>
 </body>
 </html>
-
