--- a/index.html
+++ b/index.html
@@ -3,12 +3,125 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Malla Curricular Interactiva</title>
-  <link rel="stylesheet" href="estilo.css">
+  <title>Malla Curricular Interactiva ICI - UCN</title>
+  <meta name="description" content="Aqquí revisa la malla inerractiva ICI - UCN"
+  <link href="https //fonts.googleapis.com/css2 family=poppins&display=swap" rel="estilo.css" />
+  <link reL="estilo.css" href="ESTILOS.CSS" /> 
 </head>
+  
 <body>
-  <h1>Malla Curricular Interactiva</h1>
+  <h1>ICI</h1>
   <div id="malla" class="grid"></div>
+  const ramos = [
+  // I semestre
+  { id: "fisica", nombre: "Introducción a la física", sem: 1, abre: ["mecanica"] },
+  { id: "calculo1", nombre: "Cálculo I", sem: 1, abre: ["mecanica","calculo2"] },
+  { id: "algebra1", nombre: "Álgebra I", sem: 1, abre: ["algebra2","programacion"] },
+  { id: "identidad", nombre: "Identidad, universidad, equidad y género", sem: 1, abre: ["dialogo1"] },
+  { id: "comunicacion1", nombre: "Comunicación efectiva I", sem: 1, abre: ["comunicacion2"] },
+  { id: "ingles1", nombre: "Inglés I", sem: 1, abre: ["ingles2"] },
+  { id: "proy_intro", nombre: "Proyecto Introducción a la ingeniería", sem: 1, abre: ["programacion","proy_diseno1"] },
+
+  // II
+  { id: "mecanica", nombre: "Mecánica", sem: 2, req: ["fisica","calculo1"], abre: ["electromagnetismo"] },
+  { id: "calculo2", nombre: "Cálculo II", sem: 2, req: ["calculo1"], abre: ["ec_dif","calculo3","estadistica","prod1","termo","economia"] },
+  { id: "algebra2", nombre: "Álgebra II", sem: 2, req: ["algebra1"], abre: ["ec_dif","programacion","economia","prod1"] },
+  { id: "quimica", nombre: "Química general", sem: 2, abre: ["termo"] },
+  { id: "dialogo1", nombre: "Diálogo, fe-cultura", sem: 2, req: ["identidad"], abre: ["dialogo2"] },
+  { id: "ingles2", nombre: "Inglés II", sem: 2, req: ["ingles1"] },
+
+  // III
+  { id: "ec_dif", nombre: "Ecuaciones diferenciales", sem: 3, req: ["calculo2","algebra2"], abre: ["electivo_ciencia"] },
+  { id: "calculo3", nombre: "Cálculo III", sem: 3, req: ["calculo2"], abre: ["electromagnetismo","io1"] },
+  { id: "estadistica", nombre: "Estadística", sem: 3, req: ["calculo2"], abre: ["estadistica_apli"] },
+  { id: "programacion", nombre: "Programación", sem: 3, req: ["algebra1","proy_intro"], abre: ["ciencia_datos"] },
+  { id: "electivo_gen", nombre: "Formación general electiva", sem: 3 },
+  { id: "proy_diseno1", nombre: "Proyecto diseño e innovación", sem: 3, req: ["proy_intro"], abre: ["proy_diseno2"] },
+
+  // IV
+  { id: "electromagnetismo", nombre: "Electromagnetismo", sem: 4, req: ["mecanica","calculo3"] },
+  { id: "prod1", nombre: "Administración de la producción I", sem: 4, req: ["calculo2","algebra2"], abre: ["proy_diseno2","prod2"] },
+  { id: "estadistica_apli", nombre: "Estadística aplicada", sem: 4, req: ["estadistica"], abre: ["io2"] },
+  { id: "termo", nombre: "Termodinámica", sem: 4, req: ["calculo2","quimica"] },
+  { id: "economia", nombre: "Economía", sem: 4, req: ["calculo2","algebra2"], abre: ["conta","ciencia_datos"] },
+  { id: "comunicacion2", nombre: "Comunicación efectiva II", sem: 4, req: ["comunicacion1"] },
+
+  // V
+  { id: "electivo_ciencia", nombre: "Electivo ciencias de la ingeniería", sem: 5, req: ["ec_dif"] },
+  { id: "io1", nombre: "Investigación operativa I", sem: 5, req: ["calculo3"], abre: ["io2","prod2"] },
+  { id: "ciencia_datos", nombre: "Ciencias de datos", sem: 5, req: ["programacion","economia"], abre: ["ti"] },
+  { id: "conta", nombre: "Contabilidad de dirección", sem: 5, req: ["economia"], abre: ["ing_economica"] },
+  { id: "electivo_prof1", nombre: "Electivo profesional 1", sem: 5 },
+  { id: "proy_diseno2", nombre: "Proyecto diseño de sistemas productivos", sem: 5, req: ["proy_diseno1","prod1"], abre: ["proy_calidad"] },
+
+  // VI
+  { id: "emprendimiento", nombre: "Emprendimiento", sem: 6 },
+  { id: "io2", nombre: "Investigación operativa II", sem: 6, req: ["io1","estadistica_apli"], abre: ["simulacion","cadena"] },
+  { id: "prod2", nombre: "Administración de la producción II", sem: 6, req: ["prod1","io1"], abre: ["ti","cadena"] },
+  { id: "ing_economica", nombre: "Ingeniería económica", sem: 6, req: ["conta"], abre: ["proy_inversion","gestion_activos"] },
+  { id: "electivo_prof2", nombre: "Electivo profesional 2", sem: 6 },
+  { id: "dialogo2", nombre: "Diálogo, fe-ciencia", sem: 6, req: ["dialogo1"], abre: ["etica"] },
+  { id: "proy_calidad", nombre: "Proyecto calidad", sem: 6, req: ["proy_diseno2"] },
+
+  // VII
+  { id: "sostenible", nombre: "Ingeniería y desarrollo sostenible", sem: 7 },
+  { id: "simulacion", nombre: "Simulación", sem: 7, req: ["io2"] },
+  { id: "ti", nombre: "Tecnologías de la información", sem: 7, req: ["ciencia_datos","prod2"], abre: ["org_digital"] },
+  { id: "cadena", nombre: "Cadena de suministro", sem: 7, req: ["prod2","io2"], abre: ["gestion_activos","proy_cadena"] },
+  { id: "electivo_prof3", nombre: "Electivo profesional 3", sem: 7 },
+  { id: "etica", nombre: "Ética moral-profesional", sem: 7, req: ["dialogo2"] },
+  { id: "proy_inversion", nombre: "Proyecto de inversión", sem: 7, req: ["ing_economica"], abre: ["proy_cadena"] },
+
+  // VIII
+  { id: "plan_estrategica", nombre: "Planificación estratégica", sem: 8, req: ["sostenible"] },
+  { id: "gestion_rh", nombre: "Gestión capital Humano", sem: 8 },
+  { id: "org_digital", nombre: "Organización digital", sem: 8, req: ["ti"] },
+  { id: "gestion_activos", nombre: "Gestión de activos", sem: 8, req: ["ing_economica","cadena"] },
+  { id: "electivo_prof4", nombre: "Electivo profesional 4", sem: 8 },
+  { id: "proy_cadena", nombre: "Proyecto cadena de suministro", sem: 8, req: ["cadena","proy_inversion"] },
+
+  // IX
+  { id: "electivo_prof5", nombre: "Electivo profesional 5", sem: 9 },
+  { id: "electivo_prof6", nombre: "Electivo profesional 6", sem: 9 },
+  { id: "electivo_prof7", nombre: "Electivo profesional 7", sem: 9 },
+  { id: "electivo_prof8", nombre: "Electivo profesional 8", sem: 9 },
+  { id: "electivo_prof9", nombre: "Electivo profesional 9", sem: 9 },
+  { id: "electivo_prof10", nombre: "Electivo profesional 10", sem: 9 },
+
+  // X
+  { id: "capstone", nombre: "CAPSTONE PROJECT", sem: 10, req: ["electivo_prof5","electivo_prof6","electivo_prof7","electivo_prof8","electivo_prof9","electivo_prof10"] }
+];
+
+const estado = {};
+const cont = document.getElementById("malla");
+
+function render() {
+  cont.innerHTML = "";
+  ramos.forEach(ramo => {
+    const el = document.createElement("div");
+    el.className = "ramo";
+    el.dataset.id = ramo.id;
+    el.dataset.sem = `S${ramo.sem}`;
+    el.textContent = ramo.nombre;
+    if (!puede(ramo)) el.classList.add("locked");
+    if (estado[ramo.id]) el.classList.add("approved");
+    el.onclick = () => toggle(ramo);
+    cont.appendChild(el);
+  });
+}
+
+function puede(r) {
+  return !r.req || r.req.every(x => estado[x]);
+}
+
+function toggle(r) {
+  if (!puede(r)) return;
+  estado[r.id] = !estado[r.id];
+  render();
+}
+
+render();
+
   <script src="script.js"></script>
 </body>
 </html>
